--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,9 @@
                         type="password"
                     ></input>
                 </div>
+                <div id="button-logon" class="button">
+                    Cadastrar
+                </div>
             </div>
         </div>
         <div id="auth-body-half-login" class="auth-body-half">
@@ -39,6 +42,9 @@
                         class="input-box-input"
                         type="password"
                     ></input>
+                </div>
+                <div id="button-login" class="button">
+                    Entrar
                 </div>
             </div>
         </div>
