garantindo que o usuário não passe pela tela de login caso já estiver logado

--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
                     </div>
                     {{form_logon.confirm_password(class="input-box-input")}}
                 </div>
-                <button id="button-logon" class="button" type="submit" name="button" value="logon">
+                <button id="button-logon" class="button centralize" type="submit" name="button" value="logon">
                     Cadastrar
                 </button>
             </div>
@@ -61,7 +61,7 @@
                     <p class="input-box-text">Qual sua senha?</p>
                     {{form_login.password(class="input-box-input")}}
                 </div>
-                <button id="button-login" class="button" type="submit" name="button" value="login">
+                <button id="button-login" class="button centralize" type="submit" name="button" value="login">
                     Entrar
                 </button>
             </div>
