--- a/templates/main logado.html
+++ b/templates/main logado.html
@@ -15,6 +15,9 @@
             </a>
             <p></p>
         </div>
+        <div id="bottom">
+            <p id="welcome">Bem vindo, {{username}}</p>
+        </div>
     </header>
     {% block conteudo %}{% endblock %}
 </body>
