--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,3 +1,10 @@
+/** GENÉRICOS */
+.centralize{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /** =========== CABEÇALHO =========== */
 #logo{
     margin-left: 20px;
@@ -15,9 +22,23 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px 0;
+}
+
+header #upper {
+    width: 100vw;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+header #bottom {
+    width: 100vw;
+    height: 25;
+    padding-left: 20px;
+
+    display: flex;
+    justify-content: start;
 }
 
 .logo {
@@ -123,10 +144,6 @@ nav a {
     font-weight: 700;
 
     border-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     background-color: transparent;
 }
 
@@ -157,4 +174,33 @@ nav a {
     font-weight: 700;
     background-color: white;
     color:red;
+}
+
+/** TELA DOS BOTÕES */
+#welcome{
+    height: 25px;
+
+    font-weight: 700;
+    font-size: 25px;
+}
+
+.main-half{
+    height: calc(100vh - 180px);
+    width: 100%;
+}
+
+.big-button{
+    width: 50%;
+    aspect-ratio: 1 / 1;
+
+    border-radius: 25%;
+    border: 5px solid black;
+}
+
+.big-button-icon{
+
+}
+
+.big-button-title{
+
 }
