--- a/templates/main_buttons.html
+++ b/templates/main_buttons.html
@@ -9,7 +9,8 @@
         </div>
         <div id="auth-body-half-login" class="main-half centralize">
             <div class="big-button centralize">
-    
+                <img class="big-button-icon" src="https://cdn0.iconfinder.com/data/icons/google-material-design-3-0/48/ic_add_circle_48px-256.png"/>
+                <p class="big-button-title">Minhas amostras</p>
             </div>
         </div>
     </div>
