--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -10,6 +10,8 @@
     margin-left: 20px;
 }
 body {
+    max-width: 100vw;
+
     font-family: Arial, sans-serif;
     text-align: center;
     margin: 0;
@@ -111,7 +113,7 @@ nav a {
 }
 
 .input-box{
-    width: 100%;
+    width: calc(100% - 200px);
     margin-bottom: 15px;
 
     display: flex;
@@ -205,7 +207,7 @@ nav a {
 }
 
 .big-button-icon{
-    width: 60%;
+    max-width: 60%;
     aspect-ratio: 1 / 1;
 }
 
@@ -215,6 +217,29 @@ nav a {
 
 /** GRAVADOR DE AMOSTRAS */
 #recorder-form{
+    max-width: 50vw;
+
     padding-left:20px;
-    padding-right: 200px;
+}
+
+.video_screen{
+    min-width: calc(100% - 40px);
+    min-height: calc(100% - 40px);
+
+    background-color: black;
+}
+
+.play-button{
+    max-height: 40%;
+    max-width: 100%;
+
+    border: 0px none;
+    background-color: transparent;
+
+    aspect-ratio: 1/1;
+}
+
+.play-button:hover{
+    cursor: pointer;
+    opacity: 80%;
 }
