--- a/templates/sample_recording.html
+++ b/templates/sample_recording.html
@@ -1,26 +1,29 @@
 {% extends 'main logado.html'%}
 {% block conteudo %}
 <div id="auth-body">    
-    <form id="recorder-form" class="main-half" method="POST" action="{{url_for('sample_recorder')}}">       
-        <div class="input-box">
-            <p class="input-box-text">Nome do sinal</p>
-            <input class="input-box-input" value="{{sample_name}}" disabled/>
+    <form class="main-half" method="POST" action="{{url_for('sample_recorder')}}">
+        <div id="recorder-form" class="main-half centralize">
+            <div class="input-box-recorder">
+                <p class="input-box-text">Nome do sinal</p>
+                <input class="input-box-input" value="{{sample_name}}" disabled/>
+            </div>
+            <div class="input-box-recorder">
+                <p class="input-box-text">Número de amostras</p>
+                <input class="input-box-input" value="{{length}}" disabled/>
+            </div>  
         </div>
-        <div class="input-box">
-            <p class="input-box-text">Número de amostras</p>
-            <input class="input-box-input" value="{{length}}" disabled/>
+        <div class="main-half centralize">
+            <button class="play-button stop-button" type="submit">
+                <img class="big-button-icon" src="https://cdn2.iconfinder.com/data/icons/flat-style-svg-icons-part-1/512/stop_button_play-256.png" />
+            </button>
+            <div class="video_box">
+                <img 
+                    class="video_screen"
+                    src="{{url_for('video_feed',hash=hash,folder_range=folder_range,length=length,sample_name=sample_name)}}"
+                />
+            </div>
         </div>
-        
-        <button class="play-button" type="submit">
-            <img class="big-button-icon" src="https://cdn3.iconfinder.com/data/icons/font-awesome-regular-1/512/circle-stop-256.png" />
-        </button>
     </form>
-    <div class="main-half centralize">
-        <img 
-            class="video_screen"
-            src="{{url_for('video_feed',hash=hash,folder_range=folder_range,length=length,sample_name=sample_name)}}"
-        />
-    </div>
 </div>
 
 {% endblock %}
