--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -77,7 +77,8 @@ nav a {
 }
 
 .auth-body-half{
-    height: calc(100vh - 85px);
+    min-height: 100%;
+    height: min-content;
     width: 100%;
 
     display: flex;
@@ -268,4 +269,14 @@ nav a {
     display: flex;
     flex-direction: column;
     align-items: start;
+}
+
+@media (max-width: 600px) {
+    #auth-body{
+        flex-direction: column;
+    }
+
+    .auth-body-half{
+        min-height: min-content;
+    }
 }
