trabalhando com a imagem no javascript

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -77,7 +77,7 @@ nav a {
 }
 
 .auth-body-half{
-    min-height: 100%;
+    min-height: 100vh;
     height: min-content;
     width: 100%;
 
@@ -271,7 +271,7 @@ nav a {
     align-items: start;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
     #auth-body{
         flex-direction: column;
     }
