--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gravador da TALIA</title>
+    <title>TALIA - Tradutor Automático de Libras com Inteligência Artificial</title>
     <link rel="stylesheet" href="{{url_for('static', filename='styles/main.css')}}"/>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div id="upper">
             <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaBZRakYCEVfw_WA6zKbuLyJzVTf6D7sRQsZSrZAewYPAMT5Fh4VSwsLvzzKsJaHHSVaAIsO5gbZhDLJdWbf0rA-e3tvQQ=w1920-h965" id="logo" height="65" width="65">
             <a href="#" class="logo">
-                Gravador de amostras
+                TALIA
             </a>
             <p></p>
         </div>
