--- a/templates/sample_recording.html
+++ b/templates/sample_recording.html
@@ -110,4 +110,6 @@
     usar var ou let não deixa esse processo mais leve
 
     melhor enviar para a API o array de pontos, que tem menos de 500 números
+
+    ! FAZER FAZER O MEDIAPIPE TRABALHAR NO JAVASCRIPT
 -->
