--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,14 +1,15 @@
 /** GENÉRICOS */
-.centralize{
+.centralize {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 /** =========== CABEÇALHO =========== */
-#logo{
+#logo {
     margin-left: 20px;
 }
+
 body {
     max-width: 100vw;
 
@@ -37,10 +38,9 @@ header #upper {
 header #bottom {
     width: 100vw;
     height: 25px;
-    padding-left: 20px;
 
     display: flex;
-    justify-content: start;
+    flex-direction: row;
 }
 
 .logo {
@@ -68,15 +68,43 @@ nav a {
     font-weight: bold;
 }
 
+#welcome {
+    width: 50vw;
+    height: 15px;
+    margin-top: 0px;
+
+    font-weight: 700;
+    font-size: 15px;
+    text-align: start;
+    margin-left: 20px;
+}
+
+#bottom_bar {
+    width: calc(50vw - 30px);
+    height: 15px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+
+}
+
+#bottom_bar a {
+    margin-left: 20px;
+    margin-right: 20px;
+    color: white;
+    cursor: pointer;
+}
+
 /** =========== TELA DE LOGIN =========== */
-#auth-body{
+#auth-body {
     width: 100vw;
 
     display: flex;
     flex-direction: row;
 }
 
-.auth-body-half{
+.auth-body-half {
     min-height: 100vh;
     height: min-content;
     width: 100%;
@@ -86,26 +114,26 @@ nav a {
     align-items: center;
 }
 
-#auth-body-half-logon{
-    background-color: #ff9600; 
+#auth-body-half-logon {
+    background-color: #ff9600;
 }
 
-#auth-body-half-login{
+#auth-body-half-login {
     background-color: white;
 }
 
-.auth-title{
+.auth-title {
     font-size: 30px;
     font-weight: 700;
 
     margin-bottom: 20px;
 }
 
-#auth-title-logon{
-    color:'white'
+#auth-title-logon {
+    color: 'white'
 }
 
-.auth-form{
+.auth-form {
     width: 80%;
 
     display: flex;
@@ -113,7 +141,7 @@ nav a {
     align-items: center;
 }
 
-.input-box{
+.input-box {
     width: calc(100% - 200px);
     margin-bottom: 15px;
 
@@ -122,24 +150,24 @@ nav a {
     align-items: start;
 }
 
-.input-box-text{
+.input-box-text {
     font-weight: 700;
 }
 
-#field_with_error{
+#field_with_error {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.input-box-input{
+.input-box-input {
     height: 30px;
     width: 100%;
 
     font-size: 20px;
 }
 
-.button{
+.button {
     height: 50px;
     width: 200px;
 
@@ -150,49 +178,43 @@ nav a {
     background-color: transparent;
 }
 
-.button:hover{
+.button:hover {
     cursor: pointer;
 }
 
-#button-logon{
+#button-logon {
     border: solid 5px white;
 }
 
-#button-logon:hover{
+#button-logon:hover {
     background-color: white;
 }
 
-#button-login{
+#button-login {
     border: solid 5px #ff9600;
 }
 
-#button-login:hover{
+#button-login:hover {
     background-color: #ff9600;
 }
 
-#error_message{
+#error_message {
     margin-left: 20px;
 
     font-size: 20px;
     font-weight: 700;
     background-color: white;
-    color:red;
+    color: red;
 }
 
 /** TELA DOS BOTÕES */
-#welcome{
-    height: 15px;
 
-    font-weight: 700;
-    font-size: 15px;
-}
-
-.main-half{
+.main-half {
     height: calc(100vh - 125px);
     width: 100%;
 }
 
-.big-button{
+.big-button {
     width: 50%;
     aspect-ratio: 1 / 1;
 
@@ -202,45 +224,45 @@ nav a {
     flex-direction: column;
 }
 
-.big-button:hover{
+.big-button:hover {
     cursor: pointer;
     opacity: 70%;
 }
 
-.big-button-icon{
+.big-button-icon {
     width: 60%;
     aspect-ratio: 1 / 1;
 }
 
-.big-button-title{
+.big-button-title {
     font-size: 140%;
 }
 
 /** GRAVADOR DE AMOSTRAS */
-#recorder-form{
+#recorder-form {
     height: min-content;
     max-width: calc(100vw - 20px);
-    padding-left:20px;
+    padding-left: 20px;
 
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    
+
 }
 
-.video_box{
+.video_box {
     min-width: calc(100vw - 60px);
     min-height: calc(100% - 40px);
 
     background-color: black;
 }
 
-.video_screen{
+.video_screen {
     max-height: 100%;
     aspect-ratio: 1/1;
 }
 
-.play-button{
+.play-button {
     position: absolute;
     z-index: 10;
 
@@ -253,16 +275,16 @@ nav a {
     aspect-ratio: 1/1;
 }
 
-.play-button:hover{
+.play-button:hover {
     cursor: pointer;
     opacity: 80%;
 }
 
-.stop-button{
+.stop-button {
     opacity: 0%;
 }
 
-.input-box-recorder{
+.input-box-recorder {
     width: calc(50% - 200px);
     margin-bottom: 15px;
 
@@ -271,12 +293,55 @@ nav a {
     align-items: start;
 }
 
+/** TELA DO TRADUTOR */
+
+#botoes-container {
+    width: 100vw;
+    margin-top: 20px;
+
+    display: flex;
+    align-items: center;
+
+    position: fixed;
+    bottom: 20px;
+}
+
+#botao-esquerda {
+    max-height: min-content;
+    aspect-ratio: 1/1;
+
+    background-color: #333;
+    color: #fff;
+    border: none;
+
+    /* padding: 10px 10px; */
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+    cursor: pointer;
+}
+
+.botao-icone{
+    height: 50px;
+}
+
+#campo-texto {
+    width: 100%;
+    /* O campo de texto se estenderá até o final do histórico */
+    height: 50px;
+
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 10px;
+}
+
 @media (max-width: 500px) {
-    #auth-body{
+    #auth-body {
         flex-direction: column;
     }
 
-    .auth-body-half{
+    .auth-body-half {
         min-height: min-content;
     }
 }
